--- a/index.html
+++ b/index.html
@@ -4,7 +4,68 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HARRY POTTER</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello World!</h1>
+    <div id="app">
+      <p v-if="characters.length === 0">There are no characters</p>
+      <ul v-else>
+        <li v-for="character in characters">
+          <p>{{ character.name }}</p>
+          <button v-on:click="favoriteCharacter(character.name)">Favorite character</button>
+        </li>
+      </ul>
+      <h2>Favorite characters</h2>
+      <ul v-if="favoriteCharacters.length > 0">
+        <li v-for="character in favoriteCharacters"> {{ character }}</li>
+      </ul>
+      <p v-else>There are no favorite characters yet!</p>
+      <h2>New Character</h2>
+      <label for="new-character">Name: </label>
+      <input type="text" v-model="newCharacter">
+      <button v-on:click="addCharacter" @keyup.enter="addCharacter">Add character</button>
+
+      
+    </div>
+
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script>
+      Vue.createApp({
+        data: () => ({
+          newCharacter: "",
+          characters: [
+            {
+              name: "Harry"
+            },
+            {
+              name: "Ron"
+            },
+            {
+              name: "Hermione"
+            },
+            {
+              name: "Hagrid"
+            },
+          ],
+          favoriteCharacters: [],
+        }),
+        methods: {
+          favoriteCharacter(name) {
+            console.log(name + " is my favorite character!");
+            this.favoriteCharacters.push(name)
+          },
+          addCharacter(name) {
+            if (this.newCharacter.trim() != "") {
+              this.characters.push({name: this.newCharacter});
+              this.newCharacter = "";
+            }
+            
+          },
+        }
+      }).mount('#app')
+
+
+    </script>
+  </body>
 </html>
