--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
       <label for="new-character">Name: </label>
       <input type="text" v-model="newCharacter">
       <button v-on:click="addCharacter" @keyup.enter="addCharacter">Add character</button>
-
-      
+      <h2>Statisctics</h2>
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -36,20 +35,44 @@
           newCharacter: "",
           characters: [
             {
-              name: "Harry"
+              name: "Harry",
+              gender: "male"
             },
             {
-              name: "Ron"
+              name: "Ron",
+              gender: "male"
             },
             {
-              name: "Hermione"
+              name: "Hermione",
+              gender: "female"
             },
             {
-              name: "Hagrid"
+              name: "Hagrid",
+              gender: "male",
             },
           ],
           favoriteCharacters: [],
         }),
+        computed: {
+          numberOfMale() {
+            let maleCount = 0;
+            for (i=0; i< this.characters.length; i++) {
+              if(this.characters[i].gender === "male") {
+                maleCount++
+              }
+            }
+            return maleCount;
+          },
+          numberOfFemale() {
+            let femaleCount = 0;
+            for (i=0; i< this.characters.length; i++) {
+              if(this.characters[i].gender === "female") {
+                femaleCount++
+              }
+            }
+            return femaleCount;
+          }
+        },  
         methods: {
           favoriteCharacter(name) {
             console.log(name + " is my favorite character!");
@@ -57,7 +80,7 @@
           },
           addCharacter(name) {
             if (this.newCharacter.trim() != "") {
-              this.characters.push({name: this.newCharacter});
+              this.characters.push({name: this.newCharacter, gender: "female"});
               this.newCharacter = "";
             }
             
