--- a/playground.html
+++ b/playground.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-    <h1>Counter</h1>
+    <h1>{{ displayTitle }}</h1>
     <p>{{ count }}</p>
     <button v-on:click="incrementCount">Increment Count</button>
     <div>
@@ -31,14 +31,29 @@
         data() {
           return {
             count: 10,
+            counterTitle: 'Counter Standard',
             incrementAmount: 1,
             message: 'Hello it workss!',
             listOfNumbers: [1, 2, 3, 4, 5]
           }
         },
+        computed: {
+          displayTitle() {
+            if (this.count > 20) {
+              return "Counter Standard - Very Long"
+            } else {
+              return "Counter Standard"
+            }
+          }
+        },
         methods: {
           incrementCount() {
             this.count += this.incrementAmount
+          }
+        },
+        watch: {
+          count(newValue) {
+            console.log(newValue)
           }
         }
       })
